--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<title>Branch</title>
 	</head>
 	<body>
-		
+		<div>
+			<img src="img/giphy.gif" alt="Gif Bailando">
+		</div>	
 	</body>
 </html>
