--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 		<div>
 			<img src="img/giphy.gif" alt="Gif Bailando">
 		</div>	
+		<div> <!--gif ado-->
+			<img src="img/giphy.gif" alt="gif bailando">
+		</div>
 	</body>
 </html>
